# toolbox

./: .gitignore  CHANGELOG.md  INSTALLATION.md  MANIFEST.in  PACKAGE_STRUCTURE.md  PYTHON38_COMPATIBILITY.md  QUICK_START.md  README.md  __init__.py  conftest.py  pixi.toml  publish_pypi  pyproject.toml  pytest.ini  setup.py
algutils/: .gitignore  README.md  pixi.toml  pyproject.toml
algutils/src/algutils/: __init__.py  array.py  cache.py  conftest.py  dotstyle.py  events.py  filesproc.py  fnctools.py  label.py  logs.py  pdtools.py  regexp.py  strings.py  unc_panda.py
algutils/src/algutils/image/: __init__.py  regions.py  tools.py
algutils/src/algutils/io/: __init__.py  basic_formats.py  bit_streams.py  camera.py  ciif.py  format.py  imread.py  imwrite.py  ply.py  special.py  tb.py  video.py  zfp.py
algutils/src/algutils/io/tests/: test_camera.py  test_formats.py  test_imread.py  test_pfm.py  test_zfp.py
algutils/src/algutils/math/: hist.py  test_geometry.py  test_hist.py
algutils/src/algutils/param/: __init__.py  models.py  paramaze.py  tbox.py
algutils/src/algutils/param/fixed_pydantic_yaml/: mixin.py  model.py
algutils/src/algutils/param/tests/: test_param.py  test_tbox.py
algutils/src/algutils/tests/: array.ipynb  dot_styles_examples.ipynb  test_array.py  test_binar.py  test_cachepipe.py  test_codetools.py  test_coltools.py  test_datatools.py  test_dotstyle.py  test_events.py  test_filesproc.py  test_nptools.py  test_paths.py  test_pdtools.py  test_regexp.py  test_shorts.py
algutils/src/iad/core/: __init__.py  cache.py  codetools.py  datatools.py  env.py  events.py  filesproc.py  fnctools.py  logs.py  paths.py  pdtools.py  short.py  strings.py  tbox.py  wrap.py
algutils/src/iad/core/data/: __init__.py  array.py  binary.py  label.py  pdtools.py
algutils/src/iad/core/docs/: locators.ipynb
algutils/src/iad/core/fs/: __init__.py  env.py  filesproc.py  paths.py
algutils/src/iad/core/param/: __init__.py  confargparse.py  paramaze.py  tbox.py
algutils/src/iad/core/pydantools/: __init__.py  models.py
algutils/tests/: conftest.py  test_array.py  test_binar.py  test_cachepipe.py  test_codetools.py  test_coltools.py  test_datatools.py  test_dotstyle.py  test_events.py  test_filesproc.py  test_nptools.py  test_paths.py  test_pdtools.py  test_regexp.py  test_shorts.py  test_tbox.py
algutils/tests/data/: .env
algutils/tests/param/: test_param.py  test_tbox.py
algutils/tests/pydantools_merged/fixed_pydantic_yaml/: test_advanced_yaml.py  test_basic.py  test_io.py  test_resursive.py  test_secret_types.py  test_sorting.py  test_types.py  test_versioned.py
annotations/: README.md  __init__.py  collect.py  pyproject.toml  visual.py
annotations/src/iad/annotations/: __init__.py  collect.py  env.py  issues.ipynb  visual.py
annotations/tests/: test_issues.py
datacast/: __init__.py  caster.py  collect.py  labeled.py  models.py  pixi.toml  pyproject.toml  scan.py  transforms.py  transtools.py
datacast/docs/: data_casting.md  data_resources.md  ds_user_manual.ipynb  labeled_data.md  real_ds_eval_example.ipynb  real_ds_example.ipynb
datacast/src/datacast/: __init__.py  caster.py  collect.py  labeled.py  transforms.py  transtools.py
datacast/tests/: test_collect.py  test_datasets.py  test_models.py  test_scheme.py
datacast/tests/data/datasets/toy/: datasource.yml
datacast/tests/data/res/: FT3D.col.yml  test_FT3D.src.yml  toy_split.ds.yml
dataman/: README.md  pyproject.toml
dataman/docs/: use_cases.md  use_cases.py
dataman/src/iad/dataman/: __init__.py  env.py  factories.py  models.py  resman.py
dataman/src/iad/dataman/datacast/: caster.py  collect.py  labeled.py  scan.py  transforms.py  transtools.py
dataman/src/iad/dataman/pydantools/: __init__.py  models.py
dataman/tests/: conftest.py  test.env
dataman/tests/datacast/: test_collect.py  test_scheme.py
dataman/tests/datasets/: test_datasets.py  test_models.py
dataman/tests/datasets/data/: scheme.yml
dataman/tests/pydantools/: test_models.py
dataman/tests/pydantools/fixed_pydantic_yaml/: test_advanced_yaml.py  test_basic.py  test_io.py  test_resursive.py  test_secret_types.py  test_sorting.py  test_types.py  test_versioned.py
dataman/tests/resman/: test_resource.py
dataman/tests/resman/data/res/: wind.dply.yml
dataman/tests/test_resources/data/: StereoImage_1058262900228717.tif
dataman/tests/test_resources/data/tiny_stereo/: datasource.yml
dataman/tests/test_resources/resources/benchmarks/: tiny.bmk.yml
dataman/tests/test_resources/resources/collections/: tiny.col.yml  tiny_2.col.yml
dataman/tests/test_resources/resources/datasets/: tiny.ds.yml
dataman/tests/test_resources/resources/issues/: selector_issues.csv
engines/: README.md  __init__.py  core.py  create_catalogs.py  engines.md  label_io.py  pyproject.toml  register.py
engines/src/iad/engines/: __init__.py  core.py  create_catalogs.py  diagrams.md  label_io.py  register.py
fio/: README.md  pyproject.toml
fio/src/iad/io/: basic_formats.py  bit_streams.py  ciif.py  format.py  imread.py  imwrite.py  special.py  tb.py
fio/tests/: test_formats.py  test_imread.py  test_pfm.py  test_zfp.py
imgtools/: README.md  pyproject.toml
imgtools/src/iad/img/: camera.py  regions.py  tools.py  transforms.py
imgtools/tests/: test_camera.py
maths/: README.md  pyproject.toml
maths/src/iad/maths/: hist.py  regress.py
maths/tests/: test_geometry.py  test_hist.py
vis/: README.md  embedding_in_qt5.py  imageviewer.py  insight.py  interact.py  jupyter.py  mpl_styles.py  mpl_utils.py  pixi.toml  pyproject.toml  view3d.py
vis/annotations/: __init__.py  collect.py  issues.ipynb  visual.py
vis/annotations/tests/: test_issues.py
vis/colormaps/: blush_cm.py  glow_cm.py  rain.jscm  wide_cm.py
vis/poly_to_mask/: README.org  example.py  roipoly.py
vis/src/algovis/: __init__.py  imageviewer.py  insight.py  interact.py
vis/src/algovis/poly_to_mask/: example.py
vis/src/iad/vis/: dotstyle.py  imageviewer.py  insight.py  interact.py  ipv.py  view3d.py
vis/tests/: test_dotstyle.py  test_insight.py  test_interact.py
(+123 files in other folders)
