[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "toolbox"
version = "0.1.0"  # Update this as needed
description = "A comprehensive toolbox for data management, processing, and visualization"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pydantic>=1.10,<2.0",
    "pandas>=1.3.0",
    "numpy>=1.20.0",
    "pyyaml>=5.4.0",
    "ruamel.yaml>=0.15.0",
    "regex>=2021.0.0",
    "tqdm>=4.60.0",
    "frozendict>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]
all = [
    "toolbox[dev]",
    # Add other optional dependencies here
]

[project.urls]
Homepage = "https://github.com/yourusername/toolbox"
Documentation = "https://toolbox.readthedocs.io"
Repository = "https://github.com/yourusername/toolbox"
Issues = "https://github.com/yourusername/toolbox/issues"

[tool.setuptools]
# Explicit packages: toolbox + subpackages (utils removed; use algutils). Exclude algutils dir.
packages = ["toolbox", "toolbox.datacast", "toolbox.engines", "toolbox.resman", "toolbox.vis"]

[tool.setuptools.package-data]
toolbox = [
    "**/*.yml",
    "**/*.yaml",
    "**/*.json",
    "**/*.md",
    "**/*.ipynb",
    "**/*.puml",
    "**/*.jscm",
    "**/*.org",
    "py.typed",
]

[tool.setuptools.package-dir]
# The repo root IS the toolbox package (i.e. __init__.py is at the root, not in a toolbox/ subdir)
"toolbox" = "."

[tool.pytest.ini_options]
testpaths = ["toolbox"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
packages = ["toolbox"]


[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
toolbox = { path = ".", editable = true }
algutils = { path = "./algutils", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
all = { features = ["all"], solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }

[tool.pixi.tasks]
