# Meta-package ``ialgdev``: dependency-only aggregate (``packages = []``); setuptools is one PEP 517 backend that builds an empty wheel cleanly.
# Libraries under ``algutils/``, ``fio/``, … use Flit — see README.
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ialgdev"
version = "0.2.0"
description = "Meta package: aggregates ialdev-* libraries (install from repo root or PyPI)"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "ipcoder" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "ialdev-core",
    "ialdev-maths",
    "ialdev-io",
    "ialdev-img",
    "ialdev-dataman",
    "ialdev-vis",
    "ialdev-annotations",
    "ialdev-engines",
    "pandas>=1.3.0",
    "numpy>=1.20.0",
    "pydantic>=2.0",
    "pyyaml>=5.4.0",
    "ruamel.yaml>=0.15.0",
    "regex>=2021.0.0",
    "tqdm>=4.60.0",
    "frozendict>=2.0.0", "pytest>=9.0.3,<10", "ipython>=9.13.0,<10", "pygraphviz>=1.14,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]
all = [
    "ialgdev[dev]",
]

[project.urls]
Homepage = "https://github.com/ipcoder/ialdev"
Repository = "https://github.com/ipcoder/ialdev"
Issues = "https://github.com/ipcoder/ialdev/issues"

[tool.setuptools]
packages = []

# Pytest defaults for this workspace: ``pytest.ini`` at repo root (IDE / ``pytest`` from repo root).
# Subpackages keep ``[tool.pytest.ini_options]`` for ``cd package && pytest``.

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

# Pixi workspace / tasks / conda deps: see ``pixi.toml`` at repo root (preferred over embedding ``[tool.pixi]`` here).
