[build-system]
requires = ["flit_core>=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ialdev-core"
version = "0.2.0"
description = "iad.core — algorithmic utilities: data tools, parameters, paths, caching, and more"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "ipcoder"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pydantic>=2.0",
    "pandas>=2.1.0",
    "numpy>=2.0",
    "pyyaml>=5.4.0",
    "ruamel.yaml>=0.15.0",
    "regex>=2021.0.0",
    "rapidfuzz>=3.0",
    "tqdm>=4.60.0",
    "frozendict>=2.0.0",
    "python-box>=6.0.0",
    "joblib>=1.0.0",
    "configargparse>=1.0.0",
    "deprecated>=1.2.0",
    "semver>=2.13.0",
    "uncertainties>=3.1.0",
    "pint>=0.20.0",
    "zfpy",
    "xxhash>=3.0.0",
    "toolz>=0.11.0",
    "numba>=0.55.0",
    "scikit-learn>=1.0.0",
    "python-dotenv>=0.19.0",
]

[project.urls]
Homepage = "https://github.com/ipcoder/ialdev/tree/master/algutils"
Repository = "https://github.com/ipcoder/ialdev"
Issues = "https://github.com/ipcoder/ialdev/issues"

# Distribution name (ialdev-core) ≠ import name (iad.core)
[tool.flit.module]
name = "iad.core"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["src"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
