[build-system]
requires = ["flit_core>=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ialdev-annotations"
version = "0.2.0"
description = "iad.annotations — issue collections and annotation tooling"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    {name = "ipcoder"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "ialdev-core",
    "ialdev-dataman",
    "ialdev-vis",
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "ipywidgets>=7.0.0",
    "matplotlib>=3.5.0",
    "mplcursors",
    "IPython>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.urls]
Homepage = "https://github.com/ipcoder/ialdev/tree/master/annotations"
Repository = "https://github.com/ipcoder/ialdev"
Issues = "https://github.com/ipcoder/ialdev/issues"

[tool.flit.module]
name = "iad.annotations"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["src"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
