[build-system]
requires = ["flit_core>=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ialdev-dataman"
version = "0.2.0"
description = "Imported as `iad.dataman` — data casting, resource models, and dataset bridge"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "ipcoder"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "ialdev-core",
    "ialdev-io",
    "ialdev-img",
    "ialdev-maths",
    "pandas>=2.0.0",
    "numpy>=2.0",
    "pydantic>=2.0",
    "pyyaml>=5.4.0",
    "regex>=2021.0.0",
    "tqdm>=4.60.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/ipcoder/ialdev/tree/master/dataman"
Repository = "https://github.com/ipcoder/ialdev"
Issues = "https://github.com/ipcoder/ialdev/issues"

[tool.flit.module]
name = "iad.dataman"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
