[build-system]
requires = ["flit_core>=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ialdev-engines"
version = "0.1.0"
description = "iad.engines — algorithm engine registry and catalogs"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "ialdev-core",
    "ialdev-dataman",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.flit.module]
name = "iad.engines"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
