[build-system]
requires = ["flit_core>=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ialdev-img"
version = "0.2.0"
description = "iad.img — image transforms, regions, and stereo camera models"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "ipcoder"}
]
dependencies = [
    "ialdev-core",
    "ialdev-io",
    "ialdev-maths",
    "numpy>=1.20.0",
    "xxhash>=3.0.0",
    "toolz>=0.11.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[project.urls]
Homepage = "https://github.com/ipcoder/ialdev/tree/master/imgtools"
Repository = "https://github.com/ipcoder/ialdev"
Issues = "https://github.com/ipcoder/ialdev/issues"

[tool.flit.module]
name = "iad.img"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["src"]
