[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "algovis"
version = "0.1.0"
description = "Visualization utilities: image grids, interactive viewers, colormaps, and matplotlib helpers"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "algutils",
    "matplotlib>=3.5.0",
    "numpy>=1.20.0",
    "regex>=2021.0.0",
]

[project.optional-dependencies]
qt = [
    "PyQt5>=5.15.0",
    "scikit-image>=0.19.0",
]
jupyter = [
    "ipywidgets>=7.0.0",
    "IPython>=7.0.0",
]
3d = [
    "open3d>=0.15.0",
    "ipyvolume>=0.6.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
]
all = [
    "algovis[qt,jupyter,3d,dev]",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
algovis = ["**/*.yml", "**/*.yaml", "**/*.json", "**/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
