[build-system]
requires = ["flit_core>=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ialdev-vis"
version = "0.2.0"
description = "iad.vis — visualization utilities (image grids, viewers, colormaps, matplotlib helpers)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "ipcoder"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "ialdev-core",
    "ialdev-io",
    "matplotlib>=3.5.0",
    "numpy>=1.20.0",
    "regex>=2021.0.0",
]

[project.optional-dependencies]
graphviz = [
    "pygraphviz>=1.14,<2",
]
qt = [
    "PyQt5>=5.15.0",
    "scikit-image>=0.19.0",
]
jupyter = [
    "ipywidgets>=7.0.0",
    "IPython>=7.0.0",
]
"3d" = [
    "open3d>=0.15.0",
    "ipyvolume>=0.6.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
]
all = [
    "ialdev-vis[graphviz,qt,jupyter,3d,dev]",
]

[project.urls]
Homepage = "https://github.com/ipcoder/ialdev/tree/master/vis"
Repository = "https://github.com/ipcoder/ialdev"
Issues = "https://github.com/ipcoder/ialdev/issues"

[tool.flit.module]
name = "iad.vis"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
